# hive

./: .gitignore  .mockend.json  .project  Cargo.toml  LICENSE.txt  README.md  build.rs  build_cross_interactive.sh  hive.yaml  mosquitto.conf  rsync.sh  rustfmt.toml
bluster/: Cargo.toml
bluster/src/peripheral/bluez/: connection.rs
bluster/src/peripheral/bluez/gatt/: characteristic.rs  mod.rs
bluster/tests/: peripheral.rs
examples/: bluetooth_connect.rs  connect.yaml  connect_3000.toml  hive.rs  hive_window.rs  just_listen.rs  just_run.rs  listen_3000.json  listen_3000.toml  listen_3000.yaml  middle_man.rs  motors.toml  mqtt_config.toml  mqtt_example.rs  new_thing.rs  play.rs  properties.rs  properties.toml  streams.rs  test.rs  usb.rs
libraries/: libdbus-1-3_1.12.20-0+deb10u1_armhf.deb  libgcrypt20_1.8.4-5_armhf.deb  libgpg-error-dev_1.35-1_armhf.deb  liblz4-1_1.8.3-1_armhf.deb  liblzma-dev_5.2.4-1_armhf.deb  libpcre3-dbg_8.39-12_armhf.deb  libpcre3_8.39-12_armhf.deb  libselinux1-dev_3.1-2+b1_armhf.deb
scripts/: android_build.sh
src/: android.rs  backoff.rs  file_transfer.rs  handler.rs  hive.rs  hive_gui.rs  hive_macros.rs  hive_status.md  lib.rs  main.rs  main_old.rs  models.rs  peer.rs  property.rs  signal.rs
src/bluetooth/: advertise.rs  blurz.rs  blurz_cross.rs  central.rs  mod.rs  my_blurz.rs  peripheral.rs
src/hive_gui/: build.rs  mod.rs
src/hive_gui/ui/: thing.slint
src/hunter/: idle_monitor.rs  instructions.md  manifest.rs  mod.rs  node.rs  provisioner.rs  quarantine.rs  scanner.rs  self_update.rs  signature_sync.rs  status.md
src/mqtt/: mod.rs  mqtt_peer.rs
src/multicast/: mod.rs
src/ui/: thing.slint  thing2.slint
src/websocket/: mod.rs
tests/: discover.rs  file_transfer.rs  middle_man.rs  mqtt_middle_man.rs  mqtt_peer.rs  property_backoff.rs  streams.rs  temp.rs
