[package]
name = "hive"
version = "0.1.408"
authors = ["Enoch Carter <mrenoch@gmail.com>"]
edition = "2018"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["gui"]

bluetooth = ["bluster", "blurz", "uuid", "tokio", "lazy_static", "regex"]
websock = ["websocket-codec", "base64", "sha-1", "tokio-util"]
rest = ["reqwest", "tokio"]
gui = ["slint", "crossbeam-channel"]

[dependencies]
ahash = "0.8.11"
slint = { version="1.4.0", optional=true }
futures = "0.3"
#futures-lite = "1.11.3", can't quite use the lite lib.
#https://docs.rs/config/0.10.1/config/
toml = "0.9.5"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
#    "std",
#    "fmt",
    "env-filter",
#    "time",
#    "local-time",
#    "chrono"
] }
config = "0.13.4"
log = "0.4.11"
async-std = "1.9.0"
chrono = "0.4.19"
# bytes version limited to reduce duplication with bluetooth
bytes = "1.0.1"
local_ipaddress = "0.1"
num-traits = "0.2.14"
bluster =     {version= "0.2.0", optional=true}
uuid =        {version= "1.18.1", optional=true}
tokio =       {version="1.3.0", optional=true, features=["rt-multi-thread", "time"]}
lazy_static = {version="1.4.0", optional=true}
# regix version limited by serd_hjson / config
regex =       {version="1.0", optional=true}
websocket-codec =    { version = "0.5.0", optional = true }
base64 =             { version = "0.22.1", optional = true }
sha-1 =              { version = "0.10.1", optional = true }
tokio-util =         { version = "0.7.16", optional = true }
crossbeam-channel = { version = "0.5", optional = true }

# rest optional dependancy
reqwest = {version= "0.12.24", optional = true, features=["json"]}

[target.'cfg(target_os = "linux")'.dependencies]
blurz = { version = "0.4.0", optional = true }
# bluz is depebdent on dbus which requires libdbus-1-dev


[lib]
name = "hive"
# this is needed to build for iOS and Android.
crate-type = ["staticlib", "cdylib", "lib"]

# this dependency is only needed for Android.
[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21.1", default-features = false }

[build-dependencies]
slint-build = "1.4.0"