[package]
name = "hive"
version = "0.2.200"
authors = ["Enoch Carter <mrenoch@gmail.com>"]
edition = "2021"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
#default = ["gui"]

bluetooth = ["bluster", "blurz", "uuid", "lazy_static", "regex"]
websock = ["websocket-codec", "base64", "sha-1"]
rest = ["reqwest"]
mqtt = ["rumqttc"]
gui = ["slint", "crossbeam-channel"]
hunter = ["sha2", "serde", "serde_json", "hex"]

[dependencies]
ahash = "0.8.12"
slint = { version="1.13", optional=true }
futures = "0.3"
#https://docs.rs/config/0.10.1/config/
toml = "1.0.1+spec-1.1.0"
tracing = { version = "0.1" }
log = "0.4.29"
chrono = "0.4.42"
# bytes version limited to reduce duplication with bluetooth
bytes = { version = "1.10"}
local_ipaddress = "0.1"
num-traits = "0.2.19"
bluster =         {version= "0.2.0", optional=true}
uuid =            {version= "1.18.1", optional=true}
tokio = { version = "1.48.0", features = ["full", "io-util"] }
tokio-util = { version = "0.7.16" }
tokio-stream = { version = "0.1", features = ["sync"] }
lazy_static =     {version="1.5.0", optional=true}
regex =           {version="1.12.2", optional=true}
websocket-codec = { version = "0.5.2", optional = true }
base64 =          { version = "0.22.1", optional = true }
sha-1 =           { version = "0.10.1", optional = true }

crossbeam-channel = { version = "0.5", optional = true }
rumqttc = { version = "0.25", optional = true }

# rest optional dependancy
reqwest = {version= "0.13.2", optional = true, features=["json"]}
ctrlc = "3.5.0"

# hunter dependencies
sha2 = { version = "0.10", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
hex = { version = "0.4", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
blurz = { version = "0.4.0", optional = true }
# bluz is depebdent on dbus which requires libdbus-1-dev


[lib]
name = "hive"
# this is needed to build for iOS and Android.
crate-type = ["staticlib", "cdylib", "lib"]

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21.1", default-features = false }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
slint-build = "1.13"
